fixed layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -344,6 +344,7 @@ button:disabled {
   flex-direction: row;
   position: relative;
   top: 70px;
+  width: 100%;
   min-height: 500px; }
 
 .landing-page-container {
@@ -582,7 +583,9 @@ button:disabled {
 .portfolio__content-container {
   display: flex;
   flex-direction: column;
-  flex-basis: 90%;
+  flex-basis: 90vw;
+  flex-grow: 0;
+  width: 90%;
   background-color: black;
   box-sizing: border-box;
   padding-bottom: 5%;
@@ -606,19 +609,20 @@ button:disabled {
 .portfolio__slider__content {
   display: flex;
   flex-direction: row;
-  flex-grow: 1;
-  flex-shrink: 0; }
+  min-width: 100%; }
 
 .portfolio__slider__content__slide {
   display: flex;
   flex-direction: column;
-  flex-basis: 100vw;
-  flex-grow: 1; }
+  flex-basis: 90vw;
+  max-width: 90%;
+  flex-grow: 0; }
 
 .portfolio__slider__content__slide__game-content {
   display: flex;
   flex-direction: row;
   flex-basis: 400px;
+  width: 80%;
   flex-grow: 0;
   flex-shrink: 0;
   margin: 0; }
