--- a/src/SCSS/Containers/App-Container.scss
+++ b/src/SCSS/Containers/App-Container.scss
@@ -13,5 +13,6 @@
     flex-direction: row;
     position: relative;
     top: 70px;
+    width: 100%;
     min-height: 500px;
 }
